fix: user and payment table fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 # Logging
 logging.level.org.springframework.kafka=INFO
 logging.level.org.springframework.security=DEBUG
+
+# Swagger
